# Simple-C-to-Swift-Library-Example

./: README.md
C++/: CMakeLists.txt
C++ Library/src/: SimpleCalculator.cpp
C++/include/: SimpleCalculator.hpp
Swift/: ContentView.swift  SimpleCalculatorApp.swift  SimpleCalculatorWrapper.swift
